chore(plop): use destructing on api plop

--- a/plop/api/model.hbs
+++ b/plop/api/model.hbs
@@ -1,7 +1,6 @@
-import mongoose from 'mongoose';
+import {Schema} from 'mongoose';
 import {createSeedModel} from 'mongoose-plugin-seed';
 import seed from './{{name}}.seed';
-const Schema = mongoose.Schema;
 
 const {{properCase name}}Schema = new Schema({
   name: {
